[tool.poetry]
name = "llm-agent-study"
version = "0.1.0"
description = "Learning LLM agent with VS Code Notebook"
authors = ["Daisuke Nagao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
ipykernel = "^6.29.5"
langchain = "^0.3.23"
openai = "^1.70.0"
langchain-community = "^0.3.21"
python-dotenv = "^1.1.0"
langgraph = "^0.3.25"
langchain-openai = "^0.3.12"
graphviz = "^0.20.3"
langchain-core = "^0.3.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
